# insights-platform

./: .gitignore  Makefile  README.md
backend/: Makefile  pyproject.toml
backend/src/: .env.template  exceptions.py  main.py  mcp_client.py  models.py  routes.py  schemas.py  services.py  utils.py
backend/src/config/: core.py
backend/src/insights/: 38bf89ef_3d00_412a_8386_52a5fdc94211.json
backend/src/mediafiles/: 68c63a25_b62c_400e_96e7_0f6a58d28f7f.xlsx
docs/: thought_process.txt
web/: Dockerfile  pubspec.yaml
web/lib/: ai_service.dart  main.dart
web/lib/screens/: preview_screen.dart  upload_screen.dart
