[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "daphne>=4.2.1",
    "fastapi[standard]>=0.116.1",
    "openpyxl>=3.1.5",
    "pytest-cov>=6.2.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]
